--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ python = "^3.11"
 django = "^5.1"
 djangorestframework = "^3.15.2"
 django-environ = "^0.11.2"
+psycopg = "^3.2.1"
 
 [tool.poetry.group.linters.dependencies]
 flake8 = "^7.1.1"
