--- a/pyproject.toml
+++ b/pyproject.toml
@@ -11,6 +11,7 @@ django = "^5.1"
 djangorestframework = "^3.15.2"
 django-environ = "^0.11.2"
 psycopg = "^3.2.1"
+pydantic = "^2.8.2"
 
 [tool.poetry.group.linters.dependencies]
 flake8 = "^7.1.1"
